fix:fixed the milestone dark mode ui and several other changes

--- a/src/app/body/kanban-board/kanban-board.component.css
+++ b/src/app/body/kanban-board/kanban-board.component.css
@@ -8,7 +8,6 @@
 
 #filterMenu, #dropdownUserCard {
     background-color: var(--secondary-bg);
-    border-color: var(--primary-color);
     color: var(--text); 
 }
 #tasksContainer {
